Fix z-index

--- a/innovation.scss
+++ b/innovation.scss
@@ -601,7 +601,7 @@
                 color: #000000;
                 border: 1px solid #000000;
                 border-radius: 50%;
-                z-index: 1000;
+                z-index: 100;
             }
         }
     }
